公共函数库+栈+冒泡排序
1.增加了公共函数库，并编写了部分常用函数
2.增加了栈的实现算法
3.改进了冒泡排序的部分算法

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.16)
 project(DataStructures)
 set(CMAKE_CXX_STANDARD 14)
 SET(SOURCE_FILES
-        src/Sort/BubbleSort/BubbleSort.cpp)
+        src/Sort/BubbleSort/BubbleSort.cpp src/Sort/SimpleSelect/SimpleSelect.cpp src/Common/Commons.cpp src/Common/Commons.h src/Stack/Stack.cpp src/Stack/Stack.h)
 add_executable(DataStructures
         ${SOURCE_FILES}
         main.cpp)
