优化代码逻辑和目录结构
1.优化了代码逻辑关系
2.优化了目录结构

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.16)
 project(DataStructures)
 set(CMAKE_CXX_STANDARD 14)
 SET(SOURCE_FILES
-        src/Sort/BubbleSort/BubbleSort.cpp src/Sort/SimpleSelect/SimpleSelect.cpp src/Common/Commons.cpp src/Common/Commons.h src/Stack/Stack.cpp src/Stack/Stack.h src/Stack/testStack.cpp src/Sort/testSort.cpp src/Sort/Sort.cpp src/Sort/Sort.h)
+        src/DS/Sort/Swap/BubbleSort/BubbleSort.cpp src/DS/Sort/Select/SimpleSelect/SimpleSelect.cpp src/Common/Commons.cpp src/Common/Commons.h src/DS/Stack/Stack.cpp src/DS/Stack/Stack.h src/Test/Stack/testStack.cpp src/Test/Sort/testSort.cpp src/DS/Sort/Sort.cpp src/DS/Sort/Sort.h src/Test/Sort/testSort.h src/Test/Stack/testStack.h)
 add_executable(DataStructures
         ${SOURCE_FILES}
         main.cpp)
